--- a/app/src/main/res/layout/fragment_task_add.xml
+++ b/app/src/main/res/layout/fragment_task_add.xml
@@ -34,7 +34,8 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         app:tabIndicatorFullWidth="false"
-        app:tabIndicatorColor="@color/count_down_color"
+        app:tabTextColor="?attr/baseTextColor"
+        app:tabIndicatorColor="?attr/timerTypeTextColor"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
