--- a/app/src/main/res/layout/item_finished_task.xml
+++ b/app/src/main/res/layout/item_finished_task.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{taskModel.taskTitle}"
                 android:textSize="18sp"
+                android:textColor="?attr/baseTextColor"
                 app:layout_constraintStart_toEndOf="@+id/priority_level_dot_id"
                 app:layout_constraintEnd_toStartOf="@+id/session_count_id"
                 app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:text='@{String.valueOf(taskModel.sessionsCompleted) + "/" + String.valueOf(taskModel.sessionCount)}'
                 android:textSize="16sp"
+                android:textColor="?attr/baseTextColor"
                 app:layout_constraintStart_toEndOf="@+id/task_title_id"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -57,7 +59,7 @@
                 android:id="@+id/re_add_finished_task_icon_id"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/ic_add_task"
+                android:src="?attr/addIcon"
                 android:contentDescription="re add finished task icon"
                 android:scaleType="fitCenter"
                 android:background="?attr/selectableItemBackgroundBorderless"
