--- a/app/src/main/res/layout/item_selected_task.xml
+++ b/app/src/main/res/layout/item_selected_task.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{taskModel.taskTitle}"
                 android:textSize="18sp"
+                android:textColor="?attr/baseTextColor"
                 app:layout_constraintStart_toEndOf="@+id/priority_level_dot_id"
                 app:layout_constraintEnd_toStartOf="@+id/session_count_id"
                 app:layout_constraintTop_toTopOf="parent"
@@ -46,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{String.valueOf(taskModel.sessionCount)}"
                 android:textSize="16sp"
+                android:textColor="?attr/baseTextColor"
                 app:layout_constraintStart_toEndOf="@+id/task_title_id"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -55,7 +57,7 @@
                 android:id="@+id/delete_task_btn"
                 android:layout_width="55dp"
                 android:layout_height="55dp"
-                android:src="@drawable/ic_delete"
+                android:src="?attr/deleteIcon"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="fitCenter"
                 android:contentDescription="@string/delete_btn"
