--- a/app/src/main/res/drawable/background_dim_curved_pink.xml
+++ b/app/src/main/res/drawable/background_dim_curved_pink.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/logout_btn_color" />
+    <solid android:color="?attr/backgroundDimCurvedColor1" />
     <corners android:radius="10dp"/>
 </shape>
