--- a/app/src/main/res/drawable/background_gradient_purple.xml
+++ b/app/src/main/res/drawable/background_gradient_purple.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="135"
-        android:startColor="#8A4FFF"
-        android:endColor="#D97BFF" />
+        android:startColor="?attr/backgroundGradientCardColor2.1"
+        android:endColor="?attr/backgroundGradientCardColor2.2" />
 </shape>
