--- a/app/src/main/res/drawable/background_gradient_purple2.xml
+++ b/app/src/main/res/drawable/background_gradient_purple2.xml
@@ -3,7 +3,7 @@
     <gradient
         android:type="linear"
         android:angle="315"
-        android:startColor="#8A4FFF"
-        android:endColor="#D97BFF" />
+        android:startColor="?attr/backgroundGradientCardColor3.1"
+        android:endColor="?attr/backgroundGradientCardColor3.2" />
     <corners android:radius="16dp"/>
 </shape>
