--- a/app/src/main/res/drawable/ic_selector_bg.xml
+++ b/app/src/main/res/drawable/ic_selector_bg.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape android:shape="oval">
-            <solid android:color="@color/white"/>
-            <stroke android:width="2dp" android:color="#BB86FC"/>
+            <solid android:color="?attr/iconSelectedColor1"/>
+            <stroke android:width="2dp" android:color="?attr/iconSelectedColor2"/>
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="#33000000"/>
+            <solid android:color="?attr/iconNotSelectedColor"/>
         </shape>
     </item>
 
