--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,12 @@
 
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -55,10 +55,8 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
                 android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:src="@drawable/ic_def_profile"
-                app:civ_border_color="#FFFFFF"
-                app:civ_border_width="1dp" />
+                android:layout_height="41dp"
+                android:src="?attr/defaultUserPic" />
 
             <ImageView
                 android:layout_width="40dp"
@@ -89,7 +87,7 @@
             android:contentDescription="@string/add_task_category_btn"
             android:elevation="10dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_add_task"
+            android:src="?attr/addIcon"
             app:layout_constraintTop_toBottomOf="@+id/guideline_add_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
