--- a/app/src/main/res/layout/fragment_settings_login_account.xml
+++ b/app/src/main/res/layout/fragment_settings_login_account.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             app:constraint_referenced_ids="new_username_input_layout_id,new_password_input_layout_id,confirm_password_input_layout_id,
-                                            show_password_checkbox_id,sign_in_btn_id,or_text_id,google_sign_in_layout_id"/>
+                                            show_password_checkbox_id,sign_in_btn_id"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/login_title_id"
@@ -89,7 +89,8 @@
                     android:hint="@string/user_email_input"
                     android:inputType="text"
                     android:text="@={settingsVM.loginEmail}"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:textColor="?attr/baseTextColor"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Enter/Next arrow -->
@@ -135,7 +136,8 @@
                     android:hint="@string/password_input"
                     android:inputType="textPassword"
                     android:text="@={settingsVM.loginPassword}"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:textColor="?attr/baseTextColor"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Enter/Next arrow -->
@@ -157,8 +159,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/remember_me_label"
-            android:buttonTint="@color/white"
-            android:textColor="@color/white"
+            android:buttonTint="?attr/timerTypeTextColor"
+            android:textColor="?attr/roundedBtnBg"
             app:layout_constraintTop_toBottomOf="@+id/password_input_layout_id"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -168,7 +170,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/forgot_password_label"
-            android:textColor="@color/white"
+            android:textColor="?attr/roundedBtnBg"
             android:textStyle="bold"
             android:layout_margin="14dp"
             android:clickable="true"
@@ -184,7 +186,7 @@
             android:background="@drawable/background_dim_curved_white"
             app:backgroundTint="@null"
             android:text="@string/login_title"
-            android:textColor="@color/icon_bg1"
+            android:textColor="?attr/timerTypeTextColor"
             android:textStyle="bold"
             android:layout_marginTop="14dp"
             app:layout_constraintTop_toBottomOf="@+id/remember_me_checkbox_id"
@@ -197,7 +199,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dont_have_an_account_label"
-            android:textColor="@color/white"
+            android:textColor="?attr/roundedBtnBg"
             app:layout_constraintTop_toBottomOf="@+id/login_btn_id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -207,7 +209,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sign_up_label"
-            android:textColor="@color/icon_bg1"
+            android:textColor="?attr/timerTypeTextColor"
             android:textStyle="bold"
             android:clickable="true"
             android:focusable="true"
@@ -244,7 +246,8 @@
                     android:hint="@string/user_email_input"
                     android:inputType="text"
                     android:text="@={settingsVM.signUpEmail}"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:textColor="?attr/baseTextColor"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Enter/Next arrow -->
@@ -290,7 +293,8 @@
                     android:hint="@string/password_input"
                     android:inputType="textPassword"
                     android:text="@={settingsVM.signUpPassword}"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:textColor="?attr/baseTextColor"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Enter/Next arrow -->
@@ -336,7 +340,8 @@
                     android:hint="@string/confirm_password_input"
                     android:inputType="textPassword"
                     android:text="@={settingsVM.signUpConfirmPassword}"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:textColor="?attr/baseTextColor"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Enter/Next arrow -->
@@ -358,8 +363,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/show_password"
-            android:buttonTint="@color/white"
-            android:textColor="@color/white"
+            android:buttonTint="?attr/timerTypeTextColor"
+            android:textColor="?attr/roundedBtnBg"
             app:layout_constraintTop_toBottomOf="@+id/confirm_password_input_layout_id"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -371,58 +376,12 @@
             android:background="@drawable/background_dim_curved_white"
             app:backgroundTint="@null"
             android:text="@string/sign_in_label"
-            android:textColor="@color/icon_bg1"
+            android:textColor="?attr/timerSelectionTextColor"
             android:textStyle="bold"
             android:layout_marginTop="14dp"
             app:layout_constraintTop_toBottomOf="@+id/show_password_checkbox_id"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
-        <!-- Or text -->
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/or_text_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/or_label"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:layout_margin="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn_id"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <!-- Google sign in -->
-        <LinearLayout
-            android:id="@+id/google_sign_in_layout_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_marginTop="14dp"
-            android:padding="2dp"
-            android:background="@drawable/background_dim_curved_white"
-            app:layout_constraintTop_toBottomOf="@+id/or_text_id">
-
-            <!-- Replace image later with actual google icon-->
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/google_icon_id"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/personal_pic_placeholder"
-                android:contentDescription="@string/google_icon"/>
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/google_title_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/icon_bg1"
-                android:textStyle="bold"
-                android:text="@string/google_title"/>
-
-        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
