--- a/app/src/main/res/layout/fragment_task_add_category.xml
+++ b/app/src/main/res/layout/fragment_task_add_category.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
@@ -14,8 +15,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            xmlns:app="http://schemas.android.com/apk/res-auto">
+            android:layout_height="wrap_content">
 
             <!-- Category title -->
             <LinearLayout
@@ -32,12 +32,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/title_label"
-                    android:textColor="@android:color/white"
+                    android:textColor="?attr/baseTextColor"
                     android:textSize="20sp" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     app:hintEnabled="false"
                     app:boxBackgroundMode="none"
                     app:counterEnabled="true"
@@ -49,7 +49,10 @@
                         android:hint="@string/short_desc_label"
                         android:text="@={taskVM.categoryTitle}"
                         android:inputType="text"
-                        android:textSize="16sp"/>
+                        android:textSize="16sp"
+                        android:maxLength="30"
+                        android:textColor="?attr/baseTextColor"
+                        android:textColorHint="?attr/roundedBtnBg"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,12 +73,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/desc_label"
-                    android:textColor="@android:color/white"
+                    android:textColor="?attr/baseTextColor"
                     android:textSize="20sp" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:hintEnabled="false"
                     app:boxBackgroundMode="none">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -84,6 +88,8 @@
                         android:hint="@string/desc_placeholder"
                         android:textSize="16sp"
                         android:text="@={taskVM.categoryDescription}"
+                        android:textColor="?attr/baseTextColor"
+                        android:textColorHint="?attr/roundedBtnBg"
                         android:maxLines="5"
                         android:gravity="top|start"/>
 
@@ -105,14 +111,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/category_icon_selector_label"
-                    android:textColor="@android:color/white"
+                    android:textColor="?attr/baseTextColor"
                     android:textSize="20sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/category_icon_selector_label2"
-                    android:textColor="@color/dim_color"
+                    android:textColor="?attr/backgroundDimCurvedColor4"
                     android:textSize="14sp" />
 
                 <!-- Category selection icons -->
@@ -127,7 +133,7 @@
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_margin="6dp"
-                        android:src="@drawable/ic_category_laptop"
+                        android:src="?attr/categoryLaptopIcon"
                         android:background="@drawable/ic_selector_bg"
                         android:contentDescription="@string/selector_icon_laptop"
                         android:scaleType="centerInside"
@@ -139,7 +145,7 @@
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_margin="6dp"
-                        android:src="@drawable/ic_category_book"
+                        android:src="?attr/categoryBookIcon"
                         android:background="@drawable/ic_selector_bg"
                         android:contentDescription="@string/selector_icon_book"
                         android:scaleType="centerInside"
@@ -200,25 +206,26 @@
             </LinearLayout>
             -->
             <!-- Cancel and Save buttons -->
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/cancel_btn_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/cancel_btn"
-                android:textColor="@color/white"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="16dp"
-                android:backgroundTint="@color/category_title_color3"
-                app:layout_constraintTop_toBottomOf="@+id/task_icon_selector_layout_id"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:layout_marginTop="8dp"
+                android:backgroundTint="?attr/cancelBtnColor"
+                android:text="@string/cancel_btn"
+                android:textColor="?attr/baseTextColor"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/task_icon_selector_layout_id" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/save_btn_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/save_btn"
-                android:textColor="@color/icon_bg1"
-                android:backgroundTint="@color/white"
+                android:textColor="?attr/timerSelectionTextColor"
+                android:backgroundTint="?attr/saveBtnColor"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/task_icon_selector_layout_id"
