--- a/app/src/main/res/layout/fragment_task_view_all_task.xml
+++ b/app/src/main/res/layout/fragment_task_view_all_task.xml
@@ -78,8 +78,8 @@
             android:layout_height="wrap_content"
             android:text="Clear"
             android:textSize="16sp"
-            android:textColor="@android:color/white"
-            android:backgroundTint="@color/cropped_ellipse_color1"
+            android:textColor="?attr/baseTextColor"
+            android:backgroundTint="?attr/cancelBtnColor"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/ongoing_tasks_recycler_view_id"
             app:layout_constraintBottom_toTopOf="@+id/finished_tasks_recycler_view_id"/>
