--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -40,7 +40,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginStart="16dp"
                     android:text="@{categoryModel.categoryTitle, default=Study}"
-                    android:textColor="@android:color/white"
+                    android:textColor="?attr/baseTextColor"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/category_progress"
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:text="@string/percent_placeholder"
-                    android:textColor="@color/dim_color"
+                    android:textColor="?attr/baseTextColor"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/category_title_id" />
@@ -84,7 +84,7 @@
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
             android:elevation="4dp"
-            app:srcCompat="@{categoryModel.icon}"
+            app:srcCompatThemeAttr="@{categoryModel.icon}"
             android:contentDescription="@string/category_icon"
             app:layout_constraintStart_toStartOf="@id/category_card"
             app:layout_constraintTop_toTopOf="parent" />
