--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{taskModel.taskTitle}"
                 android:textSize="18sp"
+                android:textColor="?attr/baseTextColor"
                 app:layout_constraintStart_toEndOf="@+id/priority_level_dot_id"
                 app:layout_constraintEnd_toStartOf="@+id/session_count_id"
                 app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:text='@{String.valueOf(taskModel.sessionsCompleted) + "/" + String.valueOf(taskModel.sessionCount)}'
                 android:textSize="16sp"
+                android:textColor="?attr/baseTextColor"
                 app:layout_constraintStart_toEndOf="@+id/task_title_id"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
