--- a/app/src/main/res/layout/item_theme_spinner_dropdown.xml
+++ b/app/src/main/res/layout/item_theme_spinner_dropdown.xml
@@ -3,6 +3,6 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/white"
+    android:textColor="?attr/baseTextColor"
     android:textSize="16sp"
     android:padding="12dp"/>
